refactor(test): replace SingleConnectionTransactionalExecutor with JdbcTransactionalExecutorProvider in PagingJdbcIterableTest
Simplified JDBC connection handling by introducing JdbcTransactionalExecutorProvider. Extracted a reusable `dataSource()` method and replaced `Collectors.toList()` with `toList()`.